[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12" }
serde_json = { version = "1.0" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
